overflowing block bodies fixed

--- a/src/components/Articleblock/Articleblock.css
+++ b/src/components/Articleblock/Articleblock.css
@@ -28,4 +28,5 @@
   display: block;
   overflow-y: scroll;
   height: 6em;
+  box-sizing: border-box;
 }
