--- a/src/components/Commentblock/Commentblock.css
+++ b/src/components/Commentblock/Commentblock.css
@@ -28,4 +28,5 @@
   display: block;
   overflow-y: scroll;
   height: 5em;
+  box-sizing: border-box;
 }
